# Cryptuino

./: CMakeLists.txt  README.md
Acquisition/: CMakeLists.txt
Acquisition/TekVISA/: CMakeLists.txt
Acquisition/TekVISA/include/: CmdIntegralOption.h  CmdIntegralValueOption.h  CmdOption.h  CmdOptions.h  CmdStringOption.h  CmdStringValueOption.h  CmdValueOption.h  buffer.h  instrument.h  util.h
Acquisition/TekVISA/src/: CmdBooleanOption.cpp  CmdOption.cpp  CmdOptions.cpp  CmdStringOption.cpp  CmdStringValueOption.cpp  CmdValueOption.cpp  instrument.cpp  main_grab.cpp  main_query.cpp  main_seq.cpp  util.cpp
Arduino/: Arduino.ino  Cryptuino.ino  I_pin.cpp  I_pin.h  I_random.cpp  I_random.h  I_ser.cpp  I_ser.h  ardutil.cpp  ardutil.h  crypto.cpp  cryptuino.cpp  cryptuino.h  key.cpp  key.h  rx.cpp  rx.h  util.h
Cryptuino/: CMakeLists.txt  Cryptuino.ino  crypto.cpp  crypto.h  key.h  rx.cpp  testaesdata.txt  util.cpp
Cryptuino/Acquisition/Scripts/: loadbin.m
Cryptuino/Acquisition/TekVISA/: CMakeLists.txt
Cryptuino/Acquisition/TekVISA/include/: AcqUtil.h  CmdBooleanOption.h  Instrument.h  TekVISA.h  instrutil.h  util.h
Cryptuino/Acquisition/TekVISA/src/: AcqUtil.cpp  CmdOption.cpp  InstrUtil.cpp  Instrument.cpp  TekVISA.cpp  instrutil.cpp  main_grab.cpp  main_seq.cpp  util.cpp
Cryptuino/Analysis/: CMakeLists.txt
Cryptuino/Analysis/include/: Campaign.h
Cryptuino/Analysis/src/: Campaign.cpp  CampaignReader.cpp  main_cpa.cpp  main_verify.cpp  test_quick.cpp
Cryptuino/GUI/: CMakeLists.txt
Cryptuino/GUI/forms/: WAnalysisOptions.ui  WMainWindow.ui
Cryptuino/GUI/include/: CampaignModel.h  Plot.h  WAnalysisOptions.h  WMainWindow.h
Cryptuino/GUI/src/: CampaignModel.cpp  Plot.cpp  WAnalysisOptions.cpp  WMainWindow.cpp  main.cpp
Cryptuino/Libraries/AcquisitionUtil/: CMakeLists.txt
Cryptuino/Libraries/AcquisitionUtil/include/: IInstrument.h  MatOutput.h  Serial.h
Cryptuino/Libraries/AcquisitionUtil/src/: IInstrument.cpp  MatOutput.cpp  Serial.cpp
Cryptuino/Libraries/AnalysisUtil/: CMakeLists.txt
Cryptuino/Libraries/AnalysisUtil/include/: CPA.h  Campaign.h  CampaignReader.h  IPowerModel.h  ITrigger.h  MatInput.h  Matrix.h  PowerAES.h  Trigger.h  TriggerGT.h  TriggerGreater.h  TriggerImpl.h  TriggerSelect.h
Cryptuino/Libraries/AnalysisUtil/src/: CPA.cpp  Campaign.cpp  CampaignReader.cpp  IPowerModel.cpp  ITrigger.cpp  MatInput.cpp  PowerAES.cpp  Trigger.cpp  TriggerGT.cpp  TriggerGreater.cpp  TriggerImpl.cpp  TriggerSelect.cpp
Cryptuino/Libraries/CryptuinoUtil/: CMakeLists.txt
Cryptuino/Libraries/CryptuinoUtil/include/: CmdIntegralOption.h  CmdStringOption.h  Cryptuino.h  HexChar.h  Randomizer.h  ScopeGuard.h  buffer.h
Cryptuino/Libraries/CryptuinoUtil/src/: CmdBooleanOption.cpp  CmdOption.cpp  CmdOptions.cpp  CmdStringOption.cpp  HexChar.cpp  Randomizer.cpp  ScopeGuard.cpp
Ports/IFX/: I_pin.c  I_random.c  I_ser.c
